# oknews24-app

./: .replit  backend_test.py  pyproject.toml  replit.md  test_result.md
.agents/: agent_assets_metadata.toml
.emergent/: emergent.yml
backend/: .env  requirements.txt  server.py  start.sh
backend/migrations/: create_device_sessions.sql
frontend/: .env  app.json  eas.json  google-services.json  package-lock.json  package.json  start.sh
frontend/app/: _layout.tsx  google-services.json  index.tsx  subscription.tsx
frontend/app/(auth)/: _layout.tsx  forgot-password.tsx  index.tsx  login.tsx  register.tsx
frontend/app/(tabs)/: _layout.tsx  admin.tsx  feed-preferences.tsx  index.tsx  profile.tsx  saved-articles.tsx
frontend/app/admin/: _layout.tsx  feeds.tsx  stats.tsx  users.tsx
frontend/app/article/: [id].tsx
frontend/assets/: privacy-policy.html  store-listing.md
frontend/components/: ArticleCard.tsx  LoadingSpinner.tsx  SubscriptionBanner.tsx
frontend/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/hooks/: useBiometric.ts  usePushNotifications.ts
frontend/lib/: supabase.ts
frontend/services/: api.ts  notifications.ts  offlineStorage.ts
frontend/utils/: deviceId.ts
memory/: PRD.md
store-assets/: store-listing.md
supabase/: schema.sql
