[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.1.3",
    "email-validator==2.3.0",
    "fastapi==0.110.1",
    "feedparser==6.0.12",
    "httpx>=0.28.1",
    "motor==3.3.1",
    "pydantic==2.12.5",
    "pymongo==4.5.0",
    "python-dotenv==1.2.2",
    "python-jose[cryptography]==3.5.0",
    "python-multipart==0.0.22",
    "starlette==0.37.2",
    "stripe==14.4.1",
    "uvicorn==0.25.0",
]
